--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "axios": "^0.24.0",
-    "dotenv": "^14.2.0",
-    "express": "^4.17.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.8",
